<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cat.jorcollmar.nearbyhelper.ui.NearbyHelperActivity">

    <group
        android:id="@+id/filterGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_filter_all"
            android:checked="true"
            android:orderInCategory="101"
            android:title="@string/nearby_places_list_filter_all"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_filter_bars"
            android:orderInCategory="102"
            android:title="@string/nearby_places_list_filter_bars"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_filter_cafes"
            android:orderInCategory="103"
            android:title="@string/nearby_places_list_filter_cafes"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_filter_restaurants"
            android:orderInCategory="104"
            android:title="@string/nearby_places_list_filter_restaurants"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/action_order_by"
        android:icon="@drawable/ic_order_by"
        android:orderInCategory="100"
        android:title="@string/nearby_places_list_order_by"
        app:showAsAction="ifRoom" />
</menu>